<resources>
    <string name="app_name">BimbaTrainer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="one_player">1 player</string>
    <string name="two_player">2 player</string>

    <string name="sequence_bimba">Bimba</string>
    <string name="sequence_miudinho">Miudinho</string>
    <string name="sequence_all">All</string>

    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="random">Random</string>

    <string name="start">Start</string>
    <string name="instructions">Anleitung</string>

    <string name="audio_basepath">audio/de_DE/</string>
    <string name="audio_number_basepath">audio/de_DE/number</string>

    <string name="text_basepath">text/de_DE/</string>

    <string name="seconds_short_label">s</string>

</resources>