<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <!--<include layout="@layout/content_main"/>-->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioGroup
                android:id="@+id/playerCountRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="parent"
                android:checkedButton="@id/singlePlayerRadionBtn"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/one_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/singlePlayerRadionBtn"
            ></RadioButton>
            <RadioButton
                    android:text="@string/two_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/twoPlayerRadioBtn"></RadioButton>
        </RadioGroup>

        <RadioGroup
                android:id="@+id/sequenceChoiceRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/playerCountRadioGroup" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@id/playerCountRadioGroup" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/playerCountRadioGroup"
                android:checkedButton="@id/bimbaSequenceRadioBtn"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/sequence_bimba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bimbaSequenceRadioBtn"></RadioButton>
            <RadioButton
                    android:text="@string/sequence_miudinho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/miudinhoSequenceRadioBtn"></RadioButton>
            <RadioButton
                    android:text="@string/sequence_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/allRadionBtn"></RadioButton>
        </RadioGroup>


        <RadioGroup
                android:id="@+id/orderChoiceRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/playerCountRadioGroup" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@id/playerCountRadioGroup" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/playerCountRadioGroup"
                android:checkedButton="@id/ascendingSequenceRadioBtn"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/ascending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ascendingSequenceRadioBtn"></RadioButton>
            <RadioButton
                    android:text="@string/descending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/descendingSequenceRadioBtn"></RadioButton>
            <RadioButton
                    android:text="@string/random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/randomSequenceRadioBtn"></RadioButton>

        </RadioGroup>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            <SeekBar
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" android:id="@+id/speedSelectionBar" android:max="30"
                    android:progress="5"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/max_sequenceTime_textView"
                    android:text="30"/>
            <TextView
                    android:text="@string/seconds_short_label"
                    android:layout_width="10dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content" android:id="@+id/unit_textView"/>

        </LinearLayout>
        <Button
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/start_button" android:onClick="startExercise"/>
        <Button
                android:text="@string/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/instruction_button" android:onClick="openInstructions"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>